# VGI

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  skybox.cpp  skybox.h
CoverageReport-2021-12-12-17h38m26s/: index.html
CoverageReport-2021-12-12-17h38m26s/Modules/: VGI.html
CoverageReport-2021-12-12-17h38m26s/Modules/VGI/: camera.cpp.html  camera.h.html  collectionstack.h.html  compute_common.hpp.html  context.c.html  convert.h.html  depthguard.cpp.html  depthguard.h.html  directives.cpp.html  egl_context.c.html  eventhandler.h.html  exceptions.cpp.html  exceptions.h.html  exp.cpp.html  exp.h.html  func_common.inl.html  func_exponential.inl.html  func_geometric.inl.html  func_trigonometric.inl.html  glad.c.html  gui.cpp.html  imgui.cpp.html  imgui.h.html  imgui_draw.cpp.html  imgui_impl_glfw.cpp.html  imgui_impl_opengl3.cpp.html  imgui_impl_opengl3_loader.h.html  imgui_internal.h.html  imgui_tables.cpp.html  imgui_widgets.cpp.html  impl.h.html  impl.h2.html  imstb_rectpack.h.html  imstb_textedit.h.html  imstb_truetype.h.html  init.c.html  input.c.html  iterator.h.html  iterator.h2.html  main.cpp.html  (+65 more)
CoverageReport-2021-12-16-00h00m19s/: index.html
CoverageReport-2021-12-16-00h00m19s/Modules/: VGI.html
CoverageReport-2021-12-16-00h00m19s/Modules/VGI/: camera.cpp.html  camera.h.html  gui.cpp.html  main.cpp.html  planet.cpp.html  planet.h.html  satelite.cpp.html  satelite.h.html  shader.cpp.html  sphere.cpp.html  spice.cpp.html  state.cpp.html  state.h.html  util.cpp.html  window.cpp.html
assets/shaders/: Basic.frag  Basic.vert
config/: planets.yml
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
scripts/: build.sh  generate.bat  generate.sh  run.sh
shaders/: Basic.frag  Basic.vert  Pyramid.frag  Pyramid.vert  Skybox.vert
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/gui/: gui.cpp  gui.h
src/mesh/: mesh.cpp  mesh.h  sphere.cpp  sphere.h
src/model/: model.cpp  model.h
src/planet/: planet.cpp  planet.h
src/planets/: planet.h
src/pyramid/: pyramid.cpp  pyramid.h
src/satelites/: satelite.cpp  satelite.h
src/shader/: shader.cpp  shader.h  shaderClass.cpp  shaderClass.h
src/skybox/: skybox.cpp  skybox.h
src/sphere/: sphere.cpp  sphere.h
src/spice/: spice.cpp  spice.h
src/state/: state.cpp  state.h
src/util/: util.cpp  util.h
src/window/: window.cpp  window.h
